Fixed some alignment issues and button features.

--- a/mobilefirst.css
+++ b/mobilefirst.css
@@ -31,11 +31,16 @@ body {
 }
 
 #nav-menu-app {
-  margin: 0 1rem 0 0;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: bold;
   color: rgb(212, 100, 2);
   text-decoration: none;
+}
+
+#nav-menu-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 #main-heading {
@@ -191,12 +196,9 @@ footer {
 
   .header-titles {
     font-size: 2.3rem;
+    margin: 0 0 0 11.3rem;
     font-weight: bold;
     color: rgb(212, 100, 2);
-  }
-
-  #header-mobile-title {
-    margin-left: 5rem;
   }
 
   #headerDate {
@@ -205,6 +207,17 @@ footer {
 
   #header-logo {
     width: 3.5rem;
+  }
+
+  #nav-menu-right {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+  }
+
+  #nav-menu-app {
+    font-size: 1.3rem;
+    margin: 0 1rem 0 0;
   }
 
   #intro-img {
